--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Api for drawchamp",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "ts-node -r tsconfig-paths/register src/index.ts",
     "release": "standard-version --no-verify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@types/hapi__boom": "^9.0.1",
+    "@types/hapi__glue": "^6.1.3",
     "@types/hapi__hapi": "^20.0.8",
     "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -26,11 +28,17 @@
     "prettier": "^2.2.1",
     "standard-version": "^9.2.0",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.2",
+    "@hapi/glue": "^8.0.0",
     "@hapi/hapi": "^20.1.2",
+    "dotenv": "^8.2.0",
+    "dynamoose": "^2.7.3",
     "inversify": "^5.1.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0"
   }
 }
