--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
+    "prepare": "husky install",
     "release": "standard-version --no-verify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
