--- a/package.json
+++ b/package.json
@@ -7,28 +7,44 @@
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
     "prepare": "husky install",
     "release": "standard-version --no-verify",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "coverage": "nyc mocha"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@hapi/code": "^8.0.3",
+    "@hapi/eslint-plugin": "^5.0.0",
+    "@hapi/lab": "^24.2.1",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/chai": "^4.2.18",
     "@types/hapi__boom": "^9.0.1",
     "@types/hapi__glue": "^6.1.3",
     "@types/hapi__hapi": "^20.0.8",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.1",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "chai": "^4.3.4",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
+    "lab-transform-typescript": "^3.0.1",
     "lint-staged": "^10.5.4",
+    "mocha": "^8.4.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.2.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^10.0.0",
     "standard-version": "^9.2.0",
+    "ts-mocha": "^8.0.0",
     "ts-node": "^9.1.1",
+    "ts-sinon": "^2.0.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
   },
