--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,6 @@ jobs:
       - run: npm ci
       - run: npx eslint . --max-warnings=0
       - run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+      - run: npm run coverage
     # - run: npm run build --if-present
     # - run: npm test
