--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node -r tsconfig-paths/register src/index.ts",
     "prepare": "husky install",
     "release": "standard-version --no-verify",
-    "coverage": "nyc mocha"
+    "coverage": "nyc mocha",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
